<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etMNr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/matrikelnummer"
        android:inputType="text|number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.301"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/tvMNR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gib_deine_matrikelnummer_ein"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/etMNr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.823" />

    <Button
        android:id="@+id/btnAbschicken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abschicken"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMNr"
        app:layout_constraintVertical_bias="0.356" />

    <TextView
        android:id="@+id/servResp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/antwort_vom_server"
        android:gravity="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMNr"
        app:layout_constraintVertical_bias="0.162" />

    <Button
        android:id="@+id/btnAlternate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:onClick="sendAlternate"
        android:text="@string/alternate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAbschicken"
        app:layout_constraintVertical_bias="0.515" />

    <TextView
        android:id="@+id/tvAlternate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ergebnis_alternierende_quersumme"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnAlternate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAbschicken" />

</androidx.constraintlayout.widget.ConstraintLayout>